--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,6 @@
     "benoclock/alto-dispatcher": "^1.1"
   },
   "autoload": {
-    "psr-4": {"App\\": "app/"}
+    "psr-4": {"App\\": "App/"}
   }
 }
